# lazy-torrent

./: .gitignore  LICENSE  Pipfile  README.md  main.py  setup.cfg  torrent.py
src/: dl.py  show.py
tests/: test_main.py
