[metadata]
name = lazytorrent
description = gathers torrents of a given show and opens magnet links
author = Noel Cserepy
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    lazytorrent
install_requires =
    requests==2.26.0
    tqdm==4.62.3
    Beautifulsoup4==4.10.0
    urllib3==1.26.7
    soupsieve==2.3.1
    idna==3.3
    art==5.3
    beautifulsoup4==4.10.0
    certifi==2021.10.8
    charset-normalizer==2.0.7
    colorama==0.4.4
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]


[flake8]
max-line-length = 160